position correction ie
git-svn-id: svn://localhost/jahia/trunk@7248 69c369ed-ed09-0410-a4a1-e19a46c23626

--- a/templates/templates-intranet/src/main/webapp/css/navigation.css
+++ b/templates/templates-intranet/src/main/webapp/css/navigation.css
@@ -1,6 +1,5 @@
 #bodywrapper #navigation {
 	position:relative;
-	width: 940px;
 }
 #bodywrapper #navigation #navbar {
 	background-image: url('img/navbar-bg.png');
